# bookcraft

./: .gitignore  README.md  c-dark-keywords.yaml  c-dark-settings.yaml  c-keywords.yaml  c-settings.yaml  classes.py  config.py  fonts.yaml  helpers.py  keywords.yaml  main.py  models.py  pdf.py  pyproject.toml  ra-dark-settings.yaml  ra-keywords.yaml  ra-settings.yaml  requirements.txt  settings.yaml
classes/: book.py  config.py  helpers.py  models.py
classes/cell/: CellFactory.py
classes/cell/rules/: BreakLineRule.py  CharRule.py  HeaderSpacingRule.py  Rule.py
classes/cursor/: CursorModifierFactory.py  CursorModifierProcessor.py  CursorModifierReducer.py
classes/cursor/rules/: BlankSpaceRule.py  ContentsItemRule.py  DarkenRoleRule.py  DefaultRule.py  HeaderRule.py  HyphenRule.py  ItalicRule.py  KeywordRule.py  ParenthesisRule.py  RoleRule.py  Rule.py
classes/specs/: AfterRoleSpecification.py  FirstLineSpecification.py  IsBoldSpecification.py  IsCharEqualSpecification.py  IsEndOfLineSpecification.py  IsItalicSpecification.py  LineHasCharSpecification.py  NextCharEquals.py  PreviousCharEquals.py  Specification.py
fonts/Merriweather/: Merriweather-Black.pkl  Merriweather-BlackItalic.pkl  Merriweather-Bold.pkl  Merriweather-BoldItalic.pkl  Merriweather-Italic.pkl  Merriweather-Light.pkl  Merriweather-LightItalic.pkl  Merriweather-Regular.pkl
fonts/Montserrat/static/: Montserrat-Bold.pkl  Montserrat-ExtraLight.pkl  Montserrat-Light.pkl  (+3 more)
general/interfaces/: specification.py
general/specifications/: IsCharInLineSpecification.py  IsKeywordSpecification.py
